switching to Buffer in tcp tunnels (nodejs pls)

--- a/apidocs.html
+++ b/apidocs.html
@@ -348,11 +348,11 @@
         <hr>
         <h3><code>on("datad", receive String data)</code></h3>
         <br>
-        The TCP output. It's transmitted in hex.
+        The TCP output. It's transmitted in a Buffer object in Node.JS.
         <hr>
         <h3><code>emit("datad", String data)</code></h3>
         <br>
-        The TCP input. It's transmitted in hex.
+        The TCP input. It's transmitted in a Buffer object in Node.JS.
         <hr>
         <h3><code>on("disconnect", ...)</code></h3>
         <br>
