change anti impostor service

--- a/duckcloud_blocked.html
+++ b/duckcloud_blocked.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1>☁️ DuckCloud</h1>
 		<hr>
-		This page is being protected by DuckCloud Professional Anti-Impostor service
+		This page is being protected by DuckCloud
 		<br>
 		Description about this page:
 		<br>
