omg free shutdown ability

--- a/duckcloud_blocked.html
+++ b/duckcloud_blocked.html
@@ -22,5 +22,6 @@
 		Unfortunately, you'll still have to restart your VM to regain Web shell access.
 		<br>
 		All your login info is secure and is extended. You can't use DuckCloud right now - try again later.
+		<nodejs-embed>shutdown_info</nodejs-embed>
 	</body>
 </html>
