--- a/template_2.html
+++ b/template_2.html
@@ -14,7 +14,7 @@
 		<a href="/manage" class="logged-in-as">🚪 <nodejs-embed>username</nodejs-embed></a>
 		<h1>☁️ DuckCloud</h1>
 		<hr>
-		<a href="/" class="arrow">←</a> | <nodejs-embed>vm_name</nodejs-embed> | <a href="/shutoff/<nodejs-embed>vm_count</nodejs-embed>" onclick="document.body.insertAdjacentHTML('afterbegin','Do not click away! The page can be loading too long because Docker takes too long to stop a container.');"><nodejs-embed>switch</nodejs-embed></a> <a href="/burn/<nodejs-embed>vm_count</nodejs-embed>" onclick="return confirm('Are you sure?')">Remove VM</a> <a href="/chown/<nodejs-embed>vm_count</nodejs-embed>">Change Owner</a> <a href="/ren/<nodejs-embed>vm_count</nodejs-embed>">Rename VM</a> <a href="/limitedSettings/<nodejs-embed>vm_count</nodejs-embed>">Limited Terminal</a>
+		<a href="/" class="arrow">←</a> | <nodejs-embed>vm_name</nodejs-embed> | <a href="/shutoff/<nodejs-embed>vm_count</nodejs-embed>" onclick="document.body.insertAdjacentHTML('afterbegin','Do not click away! The page can be loading too long because Docker takes too long to stop a container.');"><nodejs-embed>switch</nodejs-embed></a> <a href="/burn/<nodejs-embed>vm_count</nodejs-embed>" onclick="return confirm('Are you sure?')">Remove VM</a> <a href="/chown/<nodejs-embed>vm_count</nodejs-embed>">Change Owner</a> <a href="/ren/<nodejs-embed>vm_count</nodejs-embed>">Rename VM</a> <a href="/whitectl/<nodejs-embed>vm_count</nodejs-embed>">Control TCP whitelist</a>
 		<br>
 		<noscript><b>Sorry, but you cannot use the terminal of this VM.</b> If you want to use the terminal, <a href="https://enable-javascript.com/">please enable JavaScript</a>.</noscript>
 		<div id="term" class="object termWidth"></div>
