--- a/register.html
+++ b/register.html
@@ -26,5 +26,7 @@
 		<a href="/ul_link">Link or log in with UltimateLogon...</a>
 		<br>
 		<a href="/">Log into an existing DuckCloud ID...</a>
+		<br>
+		<a href="/trustedTech">Help an user...</a>
 	</body>
 </html>
