when the badge isn't enough

--- a/manage.html
+++ b/manage.html
@@ -92,5 +92,12 @@
 			<input name="code" placeholder="ffffffff"></input> <button>Apply</button>
 		</form>
 		<nodejs-embed>pfm_cmtend_only_nonpro</nodejs-embed>
+		<hr>
+		<b>Certified DuckCloud Technician</b>
+		<br>
+		You are<nodejs-embed>certifiedDuckCloudTech</nodejs-embed> a DuckCloud Certified Technician.
+		<form action="/trustedTechQuery">
+			Lookup Certified Technician: <input name="username" placeholder="DuckCloud ID"> <button>Lookup</button>
+		</form>
 	</body>
 </html>
