add files (theory)

--- a/register.html
+++ b/register.html
@@ -16,6 +16,7 @@
 		<br>
 		<em>DuckCloud allows you to create free virtual machines using powerful Docker container technology.</em>
 		<br>
+		Note to DuckCloud secrets: Do not use any of your passwords you already use on other services; possibly create a strong secret with a mix of uppercase, lowercase, number and symbol characters; do not use your personal information when creating a secret; use at least 8 characters, more is better; consider using a password manager to store the secret if you have trouble remembering it.
 		<form action="/register" method="post">
 			<input name="username" placeholder="New DuckCloud ID" required title="DuckCloud ID is your public identifier you can show anywhere, but you can hide it if you want or generate it with a password manager. Note that DuckCloud IDs won't be hashed."></input>
 			<input name="password" type="password" placeholder="New DuckCloud secret" required title="DuckCloud secret is your password for DuckCloud. Something you must hide and generate with a password manager. This is hidden with dots instead of actual characters. DuckCloud secrets are hashed."></input>
