feature: recovery keys and email contact

--- a/newVM.html
+++ b/newVM.html
@@ -30,6 +30,7 @@
 		</form>
 
 		<script>
+			//feel free to change this in your own DuckCloud environment!
 			function NetworkingAgreement(el) {
 				while (el.checked) {
 					let conf = confirm("Read and confirm the Networking Agreement.\n---\nQuick Reference: s1\n\nThe IP is gonna be PC's real IP. You can attempt a DoS or a DDoS attack but PC doesn't open a port + no allocated IP + IP is dynamic (changes every router restart)");
