--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 			<button>Proceed to main page</button>
 		</form>
 		<hr>
+		If you seem to forget your DuckCloud secret, please <a href="/contact">contact the system administrator</a>.
+		<hr>
 		<a href="/ul_link">Link or log in with UltimateLogon...</a>
 		<br>
 		<a href="/register">Create a new DuckCloud ID...</a>
