--- a/manage.html
+++ b/manage.html
@@ -60,7 +60,7 @@
 		</form>
 		<a href="/trustedTechReset" onclick="return confirm('Ensure the technician has done the work, then click OK.');">Reset technician sessions</a>
 		<hr>
-		<b>Self-blocking</b> - Restricts features on your DuckCloud ID if you get seriously hacked. The blocking can be only taken off by contacting the system administrator.
+		<b>Self-blocking</b> - Restricts features on your DuckCloud ID if you get seriously hacked. The blocking can be only taken off by <a href="/contact">contacting the system administrator</a>.
 		<br>
 		Blocked features:
 		<form action="/selfblocking" method="POST">
@@ -70,6 +70,16 @@
 			<input type="checkbox" name="block_ULID" <nodejs-embed>blocked_ultimatelogon</nodejs-embed>></input> Block UltimateLogon usage (won't unlink UltimateLogon) <br>
 			<button>Apply self blocking</button>
 		</form>	
+		<hr>
+		<b>Recovery key</b> - Authorize your account if it gets selfblocked.
+		<br>
+		Recovery key length: 512
+		<br>
+		Stale: <b><nodejs-embed>isRecoveryKeyStale</nodejs-embed></b> (the staleness is enabled if you don't have a recovery key, like after a successful account recovery, not if your key is too old)
+		<br>
+		<form action="/recoverykey" method="post">
+			<button>Rotate recovery key</button>
+		</form>
 		<hr>
 		<b>Destroy the account</b> - Irreversible action to remove main data associated with you. The VMs will be stopped and removed. The DuckCloud ID will appear registerable again. The VMs will take a while if you have them running, so don't click away.
 		<form action="/destroyAccount" method="POST">
