make title a link for branding purposes

--- a/apidocs.html
+++ b/apidocs.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<a href="/manage" class="logged-in-as">🚪 <nodejs-embed>username</nodejs-embed></a>
-		<h1>☁️ DuckCloud</h1>
+		<a style="color: white; text-decoration: none" href="/"><h1>☁️ DuckCloud</h1></a>
 		<hr>
 		<a href="/main" class="arrow">←</a> | <b>DuckCloud APIs</b>
         <br>
