--- a/newVM.html
+++ b/newVM.html
@@ -19,9 +19,9 @@
 			<label>VM name</label>: <input name="vm_name" placeholder="CloudVM" required></input>
 			<br>
 			Select a distro or a preset: <select name="distro" required>
-				<option value="debian">Debian (11 aka bullseye)</option>
-				<option value="archlinux">Arch Linux (2023.02.01)</option>
-				<option value="duckcloud/suspiral" selected>Suspiral (11 aka bullseye)</option>
+				<option value="debian">Debian (12 aka bookworm)</option>
+				<option value="archlinux">Arch Linux (2023.07.09)</option>
+				<option value="duckcloud/suspiral" selected>Suspiral (12 aka bookworm)</option>
 				<option value="centos">CentOS (8.4.2105; eol)</option>
 				<option value="preset1" disabled>Presets feature coming soon...</option>
 			</select>
