Make the service run faster, remove UltimateLogon

--- a/newVM.html
+++ b/newVM.html
@@ -41,7 +41,7 @@
 			//feel free to change this in your own DuckCloud environment!
 			function NetworkingAgreement(el) {
 				while (el.checked) {
-					let conf = confirm("Read and confirm the Networking Agreement.\n---\nQuick Reference: s1\n\nThe IP is gonna be PC's real IP. You can attempt a DoS or a DDoS attack but PC doesn't open a port + no allocated IP + IP is dynamic (changes every router restart)");
+					let conf = confirm("Read and confirm the Networking Agreement.\n---\nQuick Reference: s1\n\nThe IP is gonna be PC's real IP. Do not DDoS or DoS this service.");
 					if (!conf) break;
 					conf = confirm("Read and confirm the Networking Agreement.\n---\nQuick Reference: s2\n\nYou are NOT allowed to hack anyone with the network assigned to you.\nSome sites are blocked because PC is in Russia and uses a Russian ISP. This has to do with Roskomnadzor (The Federal Service for Supervision of Communications, Information Technology and Mass Media).");
 					if (!conf) break;
