--- a/not_pro_yet.html
+++ b/not_pro_yet.html
@@ -19,6 +19,6 @@
         <br>
         Precondition failed: You must have a PRO account in order to create two or more VMs.
         <br>
-        Contact PC#7105 to obtain PRO status.
+        Contact the system administrator to obtain PRO status.
 	</body>
 </html>
