--- a/target_not_pro_yet.html
+++ b/target_not_pro_yet.html
@@ -21,7 +21,7 @@
         <br>
         Precondition failed: The target must have a PRO account in order to have two or more VMs.
         <br>
-        Tell them to contact PC#7105 to obtain PRO status.
+        Tell them to contact the system administrator to obtain PRO status.
 		<hr>
 		<b>Change owner of your VM</b>
 		<form action="/chown/<nodejs-embed>vm_count</nodejs-embed>" method="post">
