--- a/apidocs.html
+++ b/apidocs.html
@@ -31,9 +31,6 @@
         <h3>GET <a href="/register">/register</a></h3>
         Redirects the user to /main if they are logged in, otherwise prompts to register an account.
         <hr>
-        <h3>GET <a href="/trustedTech">/trustedTech</a></h3>
-        Redirects the user to /main if they are logged in, otherwise prompts to enter a Trusted Technician token.
-        <hr>
         <h3>POST /register</h3>
         Params: encode in JSON or URLencoded
         <br>
@@ -51,13 +48,6 @@
         <code>password</code> - DuckCloud secret.
         <br>
         Puts a <code>token</code> cookie if the user has successfully logged in, or redirects the user to /main if they are logged in.
-        <hr>
-        <h3>POST /trustedTechLogin</h3>
-        Params: encode in JSON or URLencoded
-        <br>
-        <code>token</code> - DuckCloud Trusted Technician password
-        <br>
-        Log in as a trusted technician. Normal tokens WILL NOT be able to proceed.
         <hr>
         <h3>GET <a href="/main">/main</a></h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
@@ -94,7 +84,11 @@
         <h3>GET <a href="/shutoff/0">/shutoff/:vmNumber</a></h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
         <br>
-        Turns on or turns off a VM. May block the operation - shutting down takes a long time. <em>(fix this, docker!)</em>
+        Params: send as HTTP query
+        <br>
+        <code>force</code> - <code>1</code> to force the VM to shut down and do not wait Docker to properly shut down.
+        <br>
+        Turns on or turns off a VM. May block the operation - shutting down without force takes a long time.
         <br>
         If launching failed (like if the user tried to remove all the binaries), a launching failed page will be shown. Otherwise redirects to /main.
         <hr>
@@ -163,33 +157,6 @@
         <br>
         Sets an amount of RAM needed for the VM.
         <hr>
-        <h3>POST /newInput/:vmNumber</h3>
-        <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        Good news: there are no parameters required for this call!
-        <br>
-        Gets the shell output.
-        <hr>
-        <h3>GET <a href="/sendInput/0?new=meow">/sendInput/:vmNumber</a></h3>
-        <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        Params: send as HTTP query
-        <br>
-        <code>new</code> - the input to send
-        <br>
-        Sends characters to the shell.
-        <hr>
-        <h3>GET <a href="/resize/0?w=40&h=12">/resize/:vmNumber</a></h3>
-        <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        Params: send as HTTP query
-        <br>
-        <code>w</code> - Width (columns)
-        <br>
-        <code>h</code> - Height (rows)
-        <br>
-        Tells the pty to adapt to the new dimensions - for example, sets process.stdout.columns in Node.JS.
-        <hr>
         <h3>GET <a href="/newVM">/newVM</a></h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
         <br>
@@ -213,46 +180,10 @@
         <br>
         Removes the <code>token</code> cookie, and redirects to /.
         <hr>
-        <b class="likeComment">// Warning! DuckCloud integration with UltimateLogon STARTS HERE. These features are MEANT to be used by PEOPLE. Bots shouldn't rely on them - just use the POST /register, and everyone will understand you.</b>
-        <hr>
-        <h3>GET <a href="/ul_link">/ul_link</a></h3>
-        Does <b>three</b> things:
-        <br>
-        1. Request the user for UltimateLogon authentication.
-        <br>
-        2. Logs into the user's linked account OR prompts user to link/create an account. (if blocked by server administrator, it just redirects to <a href="https://ultimatelogon.pcprojects.tk/blocked_user?appName=DuckCloud">https://ultimatelogon.pcprojects.tk/blocked_user?appName=DuckCloud</a> and refuses to log in)
-        <br>
-        3. Redirects the user to /main if they are logged in.
-        <hr>
-        <h3>GET <a href="/user_page">/user_page</a></h3>
-        Redirects the user to /main if they are logged in, otherwise prompts the user to select linking type (<code>link</code> or <code>new</code>)
-        <hr>
-        <h3>POST /user_page</h3>
-        Params: encode in JSON or URLencoded
-        <br>
-        <code>account_type</code> - Linking type (<code>link</code> or <code>new</code>, lowercase)
-        <br>
-        <code>old_user</code> - DuckCloud ID of user, if <code>link</code> linking type selected.
-        <br>
-        <code>old_pass</code> - DuckCloud secret of user, if <code>link</code> linking type selected.
-        <br>
-        Redirects the user to /main if they are logged in, otherwise does the configuration the user specified and returns to /.
-        <hr>
-        <h3>POST /ul_unlink</h3>
-        <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        Params: encode in JSON or URLencoded
-        <br>
-        <code>password</code> - DuckCloud secret for confirmation of identity.
-        <br>
-        Redirects the user to /main if they are logged in, otherwise does the configuration the user specified and returns to /.
-        <hr>
-        <b class="likeComment">// DuckCloud integration with UltimateLogon ENDS HERE. Bots can use the endpoints declared here.</b>
-        <hr>
         <h3>GET <a href="/manage">/manage</a></h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
         <br>
-        Allows the user to manage security options in a GUI: change password and token, remove account, enable or disable sharing, unlink from UltimateLogon.
+        Allows the user to manage security options in a GUI: change password and token, remove account, enable or disable sharing or enable self-blocking.
         <hr>
         <h3>POST /changePassword</h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
@@ -268,8 +199,6 @@
         <h3>POST /destroyAccount</h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
         <br>
-        <em>This operation requires the user to be logged without a Technician Token (using the normal token).</em>
-        <br>
         Params: encode in JSON or URLencoded
         <br>
         <code>password</code> - current DuckCloud secret for confirmation of identity.
@@ -278,8 +207,6 @@
         <hr>
         <h3>POST /changeToken</h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        <em>This operation requires the user to be logged without a Technician Token (using the normal token).</em>
         <br>
         The user's token will be changed without affecting the password. Redirects to / on success.
         <hr>
@@ -322,8 +249,6 @@
         <h3>POST /selfblock</h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
         <br>
-        <em>This operation requires the user to be logged without a Technician Token (using the normal token).</em>
-        <br>
         Params: encode in JSON or URLencoded
         <br>
         <code>block_pro</code> - set to <code>on</code> to block using PRO codes and the PRO version. Multiple VMs and PRO-RAM VMs will be kept, but you cannot create new ones.
@@ -332,8 +257,6 @@
         <br>
         <code>block_ID</code> - set to <code>on</code> to block THE WHOLE ACCOUNT.
         <br>
-        <code>block_ULID</code> - set to <code>on</code> to block using the account through UltimateLogon. The user can still use normal username/password.
-        <br>
         Strip down some of core DuckCloud mechanics in case the user gets hacked. The best way to get their account secured is still creating a new password, but if they are in a situation they can't - DuckCloud selfblocking's got the user's back.
         <br>
         Your application still doesn't need to do this do the user, but if you wanna annoy them - feel free to use this feature.
@@ -341,32 +264,11 @@
         <h3>POST /recoveryKey</h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
         <br>
-        <em>This operation requires the user to be logged without a Technician Token (using the normal token).</em>
-        <br>
         Params: encode in JSON or URLencoded
         <br>
         <code>password</code> - DuckCloud secret for confirmation of identity.
         <br>
         Creates or replaces a recovery key for the user and replies with the key on a redirect page.
-        <hr>
-        <h3>POST /trustedTechCreate</h3>
-        <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        Creates a Trusted Technician session token and replies with the token on a redirect page.
-        <hr>
-        <h3>GET <a href="/trustedTechReset">/trustedTechReset</a></h3>
-        <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        Logs out every Trusted Technician the user has allowed.
-        <hr>
-        <h3>GET <a href="/trustedTechQuery">/trustedTechQuery</a></h3>
-        <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
-        <br>
-        Params: send as HTTP query
-        <br>
-        <code>username</code> - The username to query.
-        <br>
-        Checks if a user in query parameters is a Trusted Technician.
         <hr>
         <h3>GET <a href="/xterm/lib/xterm.js">/xterm/lib/xterm.js</a></h3>
         The source code for xterm - the JavaScript part.
